Tidy up the Get Started button on homepage
- pulled the Get Started button out of the footer
- added the manifesto content to the footer in docs pages (I think this is useful content to have here - "doesn't work how you expect? help us make it better!" etc)

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -689,6 +689,47 @@ header {
   }
 }
 
+.homepage-cta {
+  @include layout-block;
+  align-self: flex-end;
+  grid-column: 2 / 5;
+  @include grid-module;
+  @include font-feature;
+  border-top: $keyline;
+  padding: $whitespace-vertical*2 0;
+  div:nth-child(1) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    z-index: 10;
+    @media (max-width: 700px) {
+      grid-column: 1 / 4;
+      a {
+        display: block;
+        text-align: center;
+        margin: 0 0.5em;
+      }
+    }
+  }
+  div:nth-child(2) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    padding-left: 7.33em;
+    text-align: center;
+    @media (max-width: 700px) {
+      grid-column: 1 / 4;
+      grid-row: 2 / 3;
+      padding: $whitespace-vertical*0.5 0;
+    }
+  }
+  div:nth-child(3) {
+    grid-column: 2 / 4;
+    @media (max-width: 700px) {
+      grid-column: 1 / 4;
+      text-align: center;
+    }
+  }
+}
+
 .terminal {
   position: relative;
   @include layout-block;
