--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -765,7 +765,7 @@ header {
     left: 0;
     right: 0;
     bottom: 0;
-    background: $text;
+    background: $text-shade;
     margin-right: $whitespace-horizontal * -2;
     z-index: 11;
     @media (max-width: 700px) {
@@ -826,10 +826,9 @@ header {
   grid-column: 2 / 5;
   @include grid-module;
   padding-top: $whitespace-vertical;
-  border-bottom: 1px solid $text;
+  border-bottom: $keyline;
   overflow: hidden;
   div {
-    // min-height: calc(#{$grid-row} - #{$whitespace-vertical * 2});
     margin-bottom: $whitespace-vertical;
     display: flex;
     flex-direction: column;
@@ -837,13 +836,6 @@ header {
     z-index: 10;
     background-repeat: no-repeat;
     background-position: center center;
-    &:nth-child(1) {
-      /*       background-image: url(../public/svg/icon-1.svg); */
-    }
-    &:nth-child(2) {
-      // grid-column: 2 / 5;
-      /*       background-image: url(../public/svg/icon-2.svg); */
-    }
     @media (max-width: 700px) {
       grid-column: 1 / 4;
       &:nth-child(2) {
@@ -858,6 +850,69 @@ header {
   }
   p {
     padding-bottom: $whitespace-vertical;
+  }
+}
+
+.fullWidth {
+  @include layout-block;
+  position: relative;
+  grid-column: 2 / 5;
+  padding-top: $whitespace-vertical;
+  border-top: $keyline;
+  h2 {
+    @include font-feature;
+    margin-bottom: $whitespace-vertical*1.5;
+  }
+  .video-container {
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    padding-bottom: 56.25%;
+    max-width: 1440px;
+    margin-bottom: $whitespace-vertical*2;
+    iframe {
+      position: absolute;
+      width: 100%!important;
+      height: 100%!important;
+      top: 0!important;
+      left: 0!important;
+      right: 0!important;
+      bottom: 0!important;
+    }
+  }
+}
+
+.comparison {
+  @include layout-block;
+  position: relative;
+  grid-column: 2 / 5;
+  padding-top: $whitespace-vertical;
+  padding-bottom: $whitespace-vertical;
+  border-top: $keyline;
+  @media (min-width: 701px) {
+    @include grid-module;
+    grid-template-columns: 50% 50%;
+  }
+  div {
+    padding-right: $whitespace-horizontal*2;
+    padding-bottom: $whitespace-vertical;
+  }
+  h2 {
+    @include font-feature;
+    margin-bottom: $whitespace-vertical*1.5;
+    grid-column: 1 / 3;
+  }
+  h3 {
+    @include font-feature;
+    margin-bottom: $whitespace-vertical*0.5;
+}
+  img, .codeblock {
+    width: 100%;
+    height: auto;
+    margin: $whitespace-vertical 0;
+  }
+  p {
+    margin: $whitespace-vertical*0.5 0;
   }
 }
 
