Make tagline link to homepage

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -165,6 +165,15 @@ a {
       display: block;
     }
   }
+
+  a {
+    text-decoration: none;
+    &:focus {
+      background: inherit;
+      color: inherit;
+      outline: inherit;
+    }
+  }
 }
 
 h2 span {
