--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -862,6 +862,59 @@ header {
   }
 }
 
+.body form {
+  @include layout-block;
+  position: relative;
+  grid-gap: 0;
+  margin: $whitespace-vertical * 2 0 0;
+  padding: $whitespace-vertical * 2 0 0;
+  border-top: $keyline;
+  h2,
+  h3 {
+    padding-top: 0;
+    @include font-core;
+    grid-column: 1 / 3;
+  }
+  fieldset {
+    border: none;
+    padding: none;
+    margin-bottom: $whitespace-vertical;
+    display: flex;
+    width: 100%;
+  }
+  input,
+  button {
+    border: $keyline;
+    padding: $whitespace-vertical * 0.5 $whitespace-horizontal;
+    @media (max-width: 1000px) {
+      padding: $whitespace-vertical * 0.5 $whitespace-horizontal * 2;
+    }
+  }
+  input {
+    border-right: none;
+    border-radius: 5px 0 0 5px;
+    flex-grow: 15;
+    &:focus {
+      outline: none;
+      &::placeholder {
+        opacity: 0.5;
+      }
+    }
+  }
+  button {
+    border-radius: 0 5px 5px 0;
+    border-left: none;
+    background: transparent;
+    cursor: pointer;
+    &:focus {
+      color: $page;
+      background: $text;
+      border-color: $text;
+      outline: none;
+    }
+  }
+}
+
 .fullWidth {
   @include layout-block;
   position: relative;
