Unbreak blank lines in code blocks

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -258,6 +258,11 @@ h2 span {
     hyphens: none;
   }
 
+  .token {
+    // Make blank lines display
+    display: inline-block;
+  }
+
   .token-line {
     padding-left: $whitespace-horizontal;
     padding-right: $whitespace-horizontal;
