--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -1226,6 +1226,9 @@ footer {
       padding-bottom: $whitespace-vertical * 2;
     }
   }
+  .body form {
+    margin-bottom: $whitespace-vertical * 4;
+  }
   #contributors {
     grid-column: 1 / 6;
     @include grid-layout;
@@ -1333,7 +1336,8 @@ footer {
       }
     }
   }
-  p.tagline {
+  p.tagline,
+  .project-from {
     grid-column: 2 / 5;
     grid-row: 4 / 5;
     padding-top: $whitespace-vertical;
